<resources>
    <string name="app_name">Assignment-1_Task-2</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_sign_in">Already Have an Account? Sign In.</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_account_sign_up">Dont Have Account? Sign Up.</string>
    <string name="textview">TextView</string>
    <string name="welcome">Welcome</string>
    <string name="uid">Username or Email</string>
    <string name="username">Username</string>
</resources>